AMBARI-507 (clemlab): k8s view: replace the git binary with JGit for GitOps (no OS git dependency)